--- a/_posts/2020-09-08-blog-post-1.md
+++ b/_posts/2020-09-08-blog-post-1.md
@@ -5,20 +5,23 @@ permalink: /posts/2020/09/3-lessons/
 
 ---
 
+ 
+I learned many things in the two and a half years I spent working towards my masters degree. Now that it is over, I feel that it is a good time to reflect and identify the most important lessons that I will carry forward into the future phases of my life. In terms of sheer quantity, most of what I learned were either problem solving techniques or new mathematical concepts. This was all expected and I am not certain that these will be the things that will stick with me for the rest of my life. Instead, there were three *unexpected* lessons I learned while I was mainly occupied with research which taught me a great deal about life. I would like to share these lessons with you so that I may better understand them for myself through the process of writing and with the hope that they will resonate with you.
 
-After over two and a half years, I finally completed my M.Sc program this past summer. My research was focused on some theoretical problems in the field of machine learning and it was highly technical and mathematical in nature. Many gruelling months were spent chipping away at solving some fundamental questions. The feeling of overcoming a daunting research problem using rigour, logic, intuition, and a little bit of luck was exhilirating. Overall, I had a blast and I learned a tremendous amount.
+For the most part, these lessons come down to **one main takeaway**. The other two lessons are basically sublessons of the first. The main takeaway is so simple that many people may dismiss it as being obvious. It is so simple that many may wonder how it took me 26 years of existence to come to this realization. Its simplicity makes it difficult to take seriously, and therefore many people will never actually be honest with themselves about this first takeaway.
 
-Of course, as one enters a new field -- be it a new business venture or a new area of research -- it is imperative and expected that the individual pick up a significant amount of domain specific knowledge. My situation was no different. Each research problem that we worked on pushed me beyond my previous level of ability and knowledge in the field. As a result, I learned a lot of cool new math and problem solving techniques. Some of this was done formally through coursework, but the majority of things I picked up were via osmosis. By spending enough time around seasoned researchers like my supervisor, I was able to absorb some of the techniques which he often employed to solve problems. Over time, I began adding these to my toolkit and before I knew it I was using these tools without thinking about it. But, I would have expected to slowly pick up these tools and learn about some new areas of math before I entered the M.Sc program and I do not imagine anyone would be very fascinated that I learned some things which I was supposed to learn. This post is about the *unexpected* lessons -- the things I subconsciously learned about life while I was occupied with research. 
 
-For the most part, these lessons boil down to **one main takeaway**. Each of the other two lessons are intimately related to the main takeaway. The main takeaway is so simple that many people may dismiss it as being obvious. It is so simple that many may wonder how it took me 26 years of existence to come to this realization. However, I believe that the simplicity of the main takeaway makes it deceptive. This deceptive quality makes it very hard to take seriously, and therefore many people will never actually be honest with themselves about this first takeaway. Alright, that is enough buildup -- lets take a look at what I have begun to understand.
 
 ### Lesson one: know what you want.
 
-How is it even possible for one to *not* know what they want? Well, it is not as hard as you may assume. In the modern world, people grow up  with a tremendous amount of external pressure, and over time it becomes challenging to separate your true desires from those which were formed due to the presence of this external pressure. The world has likely already tried to define for you what it wants you to become before you have anything to say. It begins with the expectations of your parents/teachers/coaches who love you and care for you deeply. While counterintuitive, their love can sometimes manifest in a manner that takes you further away from who you are. While these people want the best for you, sometimes they are misguided and believe that they know what and who you are better than you do. Instead of allowing you to discover and follow your own passions and desires, they put you into a box and force you to stay there using tools like authority and guilt. While all of this comes from a place of love, the end result is truly destructive -- causing you to live a life meant for someone else.
+Immediately, it is clear how easy it is to dismiss this lesson. Its obvious! How is it even possible for one to *not* know what they want? Well, it is not as hard as you may assume. The world has likely already tried to define for you what it wants you to want before you have anything to say and once you accept the world's definition for you it may become very hard to reclaim. In the modern world, people grow up  with a tremendous amount of external pressure, and over time it becomes challenging to separate your true desires from those which were formed due to the presence of this external pressure. I will explain a few ways in which external pressure tricks us into believing that we want things which we really have no true desire for. 
 
-Then, the rest of modern world begins to bombard you with television shows, advertisements, the lives of famous people, social media, news, and so much more. All of these outlets attempt to tell you what you should care about and how you should live your life: You need to make a lot of money, you need to become famous, you need career which demands the respect of others, so on and so on. Sometimes it seems that the best thing that you can do is to simply pick amongst these pre-defined options. It is difficult for anyone, let alone a child, to have a strong sense of self amidst all this noise. 
+One source of pressure is the expectations of your parents/teachers/coaches or other authority figures who love you and care for you deeply. Sometimes their love can manifest in a manner that takes you further away from who you are. While these people want the best for you, they can be misguided and believe that they know what and who you are better than you do. Instead of allowing you to discover and follow your own passions and desires, they can put you into a box and force you to stay there using tools like authority and guilt. It is natural for humans to want to please those who can provide them with feelings of validation, and therefore many give up their desires to fulfil the expectations of the authority figures in their lives. On the other hand, it could be the case that the authority figures in your life don't have any expectations from you. In such cases, it is *still* possible for one to feel the pressure of expectation, even though it does not exist! As long as an individual percieves some level of expectation from an authority figure, they are in danger of giving up their own desires. For example, imagine having a mother who is a lawyer. Whether or not your mother expects you to become a lawyer, you may *feel* as if you have something to live up to. Maybe you don't feel like you have to become a lawyer, but perhaps you feel that since your mother is a lawyer she won't be happy if you select a career which doesn't involve going to college. Therefore, you limit your career options to those which require a degree -- even though deep down you wanted to become a carpenter.
 
-A final important factor that I would like to point out (although there may be many others) is the desire for a person to feel accepted. In *any* community, an individual within that community would like to feel accepted by the others, or even better, to recieve complements from the others. If most of the people within your community also succumbed to the same external pressures as described earlier and sacrificed their own desires, goals, and priorities in order to better align themselves with the community, then they will likely try to prevent you from living the life meant for you as well. It is a vicious cycle that becomes stronger each time an individual gives up the freedom to choose their own path. 
+Meanwhile, the rest of modern world bombards you with television shows, advertisements, the lives of famous people, social media, news, magazines, and so much more. All of these outlets attempt to tell you what you should care about and how you should live your life: You need to make a lot of money, you need to become famous, you need career which demands the respect of others, you must look a certain way and wear certain clothes. The list goes on and on. Sometimes it seems that the best thing that you can do is to simply pick amongst these pre-defined options. It is difficult for anyone to have a strong sense of self amidst all of this noise.
+
+A final strong source of pressure comes from the other memmbers of our community -- our peers. In *any* community, an individual within that community would like to feel accepted by the others, or even better, to recieve complements from the others. If most of the people within your community also succumbed to the same external pressures as described earlier and sacrificed their own desires, goals, and priorities in order to better align themselves with the community, then they may want to prevent you from living the life meant for you as well. Again, even if they don't actively try to prevent you from following your own desires, you may feel pressure to do as other members of the community did. Quite simply, if everyone around you is doing one thing, it requires a great deal of courage to be the one to decide to go against the grain. Over time, it is easy to convince yourself you want what everyone else in your community wants.
+
 
 So far I have highlighted how easy it is for one to mistake your true goals/passions/dreams/desires for the goals/passions/dreams of others. I think becoming aware of the influence that the rest of the world has on us is the most important first step in self discovery, since without this awareness it is impossible to separate a true desire from an imposed desire. The rest of the steps to self discovery to me are unclear, and I don't think there is a recipe which works in general. I think each person needs to be able to answer a couple of questions for themselves, but the method to arrive at the answer will be unique for each individual. Some questions which I think are important to ask yourself are: 
 
@@ -26,36 +29,47 @@ So far I have highlighted how easy it is for one to mistake your true goals/pass
 - What things bring me the most happiness? 
 - What is it that I desire from life?
 
-Given the finiteness of life and the fact that there are no do-overs, I feel that the sooner one can answer these questions, the better. Once these questions are answered, the next two lessons should be fairly straightforward to understand. I personally do not feel like I have been able to answer these questions yet, but I am at least aware that I actually do not know the answers to these questions whereas in the past I **assumed** that I did. 
+Given the finiteness of life and the fact that there are no do-overs, I feel that the sooner one can answer these questions, the better. Even if you cannot answer these questions right now, being aware of them is important. I personally do not feel like I have been able to answer these questions yet, but I am at least aware that I actually do not know the answers to these questions whereas in the past I **assumed** that I did. 
 
 
 #### How I learned this lesson.
 
-Over time I began to realize that I was not naturally drawn towards my work. It made me contemplate my innermost desires and I realized that I had been trying to impress the people that I admire and care about the most in an effort to be more like them. This desire to impress others led to me building an identity for myself that I was scared to shed as it was something I became attached to as it was a source of pride. What I failed to understand was that the reason I admired certain people was because it was obvious to me that they were naturally drawn to their work, which to me is a sign that they know what they want. It was not their life which I desired, but it was the clarity within which they lived that I wanted. While I understand this now, for many years I thought that I wanted to live the life of those that I admire.
+As time was winding down on my M.Sc program, I began to realize that I was not naturally drawn towards my work. It made me contemplate my innermost desires and made me question if I really wanted what I convinced myself that I wanted from life. After a while I realized that I had subconsciously been setting my goals in an effort to earn validation from and to copy the footsteps of the people that I admire. **I was scared to do something different than what I percieved the people I admired would want me to do.** It is important to note that the pressure I felt was perceived -- it did not exist. I made up a scenario in my head that if I did not do the things that the people I admire did, then I would somehow disappoint them. Instead, I should have been following my heart because this made up scenario could not have been farther away from the truth.
 
 
-### Lesson two: You can define your own notion of success.
+What I failed to understand was the *true* reason that I admired certain people. The people who I looked up to all had some form of alignment within their life -- they were naturally drawn towards what they did day in and day out. It was not that I wanted to follow exactly their footsteps, but it was the clarity within which they lived that I wanted. 
 
-Many people may believe that they are the ones defining what it means to live a successful life, but in reality they are using the definitions of success recycled over and over by society or the community which they identify themselves with the most. Publish more papers, make more money, become a partner at a firm, get a black belt in Brazillian Jiu Jitsu. These are some examples of notions of success defined either by a community or by society as a whole. You may indeed want these things for yourself, but unless you *truly* know what you want you cannot be so sure. 
 
-Nowadays, I feel that there is a general obsession with "being successful". I often speak to people who tell me that they "want to be successful", that it is their only goal. When I hear people speak about success so nonchalantly, it makes me wonder what their definition of success is? I think that most often when I encounter this phrase, people are speaking about some generic level of success, defined by society. It is their only understanding of success since they do not know what they want for themselves.
+
+### Lesson two: define your own notion of success.
+
+Many people may believe that they are the ones defining what it means to live a successful life. But in reality they are using the definitions of success recycled over and over by society or the community which they identify themselves with the most. Publish more papers, make more money, become a partner at a firm, own a big house and drive an expensive car. These are some examples of notions of success defined either by a community or by society as a whole. You may indeed want these things for yourself, but unless you *truly* know what you want you cannot be so sure. In fact, my feeling is that goals like the above are usually either a means to achieve a true desire or a byproduct of having achieved that true desire. For example, if you truly wanted to devote yourself to advancing the field of artificial intelligence -- then a byproduct of having achieved this goal is that you will likely have published many papers. On the other hand, I feel that many people confuse these 'byproducts' as the actual goal and instead will end up chasing indicators of success like publications, money, and position instead. The same goes for making lots of money. Perhaps one would like to live a lifestyle with minimal amounts of work and maximal amounts of time spent doing things like camping or hunting. Then, this individual would need to have enough money saved up in order have the financial freedom to actualize this vision.
+
+
+Nowadays, I feel that there is a general yet meaningless obsession with "being successful". I often speak to people who tell me that they "want to be successful". When I hear people speak about success so nonchalantly, it makes me wonder what their definition of success is? I think that most often when I encounter this phrase, people are speaking about some generic definition of success defined by society -- usually it is money. It is their only understanding of success since they do not know what they really want for themselves.
 
 
 When you *know* what you want, the definition of success is simple. It is simply achieving what you desire.
 
 #### How I learned this lesson.
 
-During my M.Sc, I started to become obssesed with comparing the number of publications I had with others. I was beginning to become obssesed with publishing at the most prestigious conferences -- whether or not the conference cared about what I truly cared about. Once I started to understand lesson one, it became apparent to me that I was chasing a notion of success defined by the community I resided in -- academia. I would never become succesful continuing down this road because I would be moving farther and farther away from my own definition of success!
+I feel that for my entire life, up until recently, I have been defining success using the "byproducts" instead of following my heart. For example, in high school and during my undergraduate studies my definition of success was getting good grades. Instead, if I had set my definition of success to be "learn as much as I can about the things that I like to learn about" (at the time it was math) -- the grades would have come, and even if they didn't it wouldn't matter since they were not involved in my definition of sucess. Had I known this at the time, I would have been able to save myself from a lot of uneccessary stress.  
 
-### Lesson three: find the right balance.
+Later on during my M.Sc, I started to become obssesed with comparing the number of publications I had with others. Since I was too scared to decide what I wanted for myself, I turned to my community -- academia -- to define success for me. Once I started to understand lesson one, it became apparent to me that I was chasing a notion of success defined by the community I resided in. I would never become succesful continuing down this road because I would be moving farther and farther away from my own definition of success!
 
-When you know what you want, finding the right balance should be easy. If you want one thing and one thing only from life, then what may seem like an unbalanced life to others may be the correct balance for you. On the other hand, if you value many different things in life then it may not make much sense to devote all of your energy to one thing. 
+### Lesson three: find your right balance.
+
+When you know what you want, finding the right balance should be easy. If you want one thing and one thing only from life, then what may seem like an unbalanced life to others may be the correct balance for you. On the other hand, if you value many different things in life then it may not make much sense to devote all of your energy to one thing. I feel that the world has fooled us into believing that life should be about work, work, work. Sometimes I feel that people wear the sacrifices that they make to work more hours as some sort of badge of honor. It seems that many people are trying to "one up" the next guy in order to claim some make-belief trophy for who works the most. Of course, if you truly love your craft more than anything in the world, then the right balance for you might be to work all day -- and for you it probably doesn't even feel like work. But, for most people I think they are being tricked into living a miserable life where they force themselves to work more and more in order to fit in with other miserable people.   
+
+Instead, I think people should take care of themselves -- sleep enough, eat well, reduce stress, exercise. These things are non-negotiable. Many sacrifice these things to complete more 'tasks'. But at the end of the day, tasks are just tasks -- they can be done tomorrow and it is not worth it to sacrifice your well being to complete more tasks. We live only one life and any time spent without appreciation for the current moment is time wasted. Sometimes when we get caught up in the chase of completing more tasks, we lose sight of the moment. 
+
+Beyond these non-negotiable items, there is much freedom. Know what you want and you'll know your right balance.    
 
 #### How I learned this lesson.
 
-I actually learned about balance just before entering the M.Sc program. In my final years of my undergraduate program, I became obssessed with math. It was a new challenge for me, and I abandoned many things which I cared about in pursuit of this new challenge. My health and fitness suffered, personal relationships were damaged, and my life in general was out of balance. 
+I actually learned about balance just before entering the M.Sc program. In my final years of my undergraduate program, I lost sight of the non-new things that matter to me. A passion for math was a novel feeling for me and the novelty fooled me into forgetting the rest of the things that I have loved for my whole life. I forgot about playing hockey, I stopped lifting weights, I didn't eat healthy, I hardly slept more than 4-5 hours a day, and I damaged a lot important relationships. Somehow, at the time I was so proud of myself for sacrificing all of the things I had always loved to chase some new thing. Even worse, I chased it only half-heartedly. I thought that if I took all of the hardest courses and achieved an excellent standing in each one, then I would have been successful in this endeavor. Instead, if I had known what I wanted, then I could have appropriately defined a better notion of success which also maintained the right balance for me.  
 
-For some reason, it was easy for me to feel that something was wrong, and I was able to course correct easily. Throughout my M.Sc program, I maintained a life which was more balanced for me. It involved pursuing my hobbies and making time for friends and family *without* feeling guilt.
+For some reason, it was easy for me to feel that something was wrong, and I was able to course correct easily. Throughout my M.Sc program, I maintained a life which was more balanced for me. It involved pursuing my hobbies and making time for friends and family *without* any feelings of guilt.
 
 
 
