--- a/_posts/2020-09-08-blog-post-1.md
+++ b/_posts/2020-09-08-blog-post-1.md
@@ -20,7 +20,7 @@ One source of pressure is the expectations of your parents/teachers/coaches or o
 
 Meanwhile, the rest of modern world bombards you with television shows, advertisements, the lives of famous people, social media, news, magazines, and so much more. All of these outlets attempt to tell you what you should care about and how you should live your life: You need to make a lot of money, you need to become famous, you need career which demands the respect of others, you must look a certain way and wear certain clothes. The list goes on and on. Sometimes it seems that the best thing that you can do is to simply pick amongst these pre-defined options. It is difficult for anyone to have a strong sense of self amidst all of this noise.
 
-A final strong source of pressure comes from the other memmbers of our community -- our peers. In *any* community, an individual within that community would like to feel accepted by the others, or even better, to recieve complements from the others. If most of the people within your community also succumbed to the same external pressures as described earlier and sacrificed their own desires, goals, and priorities in order to better align themselves with the community, then they may want to prevent you from living the life meant for you as well. Again, even if they don't actively try to prevent you from following your own desires, you may feel pressure to do as other members of the community did. Quite simply, if everyone around you is doing one thing, it requires a great deal of courage to be the one to decide to go against the grain. Over time, it is easy to convince yourself you want what everyone else in your community wants.
+A final strong source of pressure comes from the other members of our community -- our peers. In *any* community, an individual within that community would like to feel accepted by the others, or even better, to recieve complements from the others. If most of the people within your community also succumbed to the same external pressures as described earlier and sacrificed their own desires, goals, and priorities in order to better align themselves with the community, then they may want to prevent you from living the life meant for you as well. Again, even if they don't actively try to prevent you from following your own desires, you may feel pressure to do as other members of the community did just to fit in. Quite simply, if everyone around you is doing one thing, it requires a great deal of courage to be the one to decide to go against the grain. Over time, it is easy to convince yourself you want what everyone else in your community wants.
 
 
 So far I have highlighted how easy it is for one to mistake your true goals/passions/dreams/desires for the goals/passions/dreams of others. I think becoming aware of the influence that the rest of the world has on us is the most important first step in self discovery, since without this awareness it is impossible to separate a true desire from an imposed desire. The rest of the steps to self discovery to me are unclear, and I don't think there is a recipe which works in general. I think each person needs to be able to answer a couple of questions for themselves, but the method to arrive at the answer will be unique for each individual. Some questions which I think are important to ask yourself are: 
@@ -46,20 +46,20 @@ What I failed to understand was the *true* reason that I admired certain people.
 Many people may believe that they are the ones defining what it means to live a successful life. But in reality they are using the definitions of success recycled over and over by society or the community which they identify themselves with the most. Publish more papers, make more money, become a partner at a firm, own a big house and drive an expensive car. These are some examples of notions of success defined either by a community or by society as a whole. You may indeed want these things for yourself, but unless you *truly* know what you want you cannot be so sure. In fact, my feeling is that goals like the above are usually either a means to achieve a true desire or a byproduct of having achieved that true desire. For example, if you truly wanted to devote yourself to advancing the field of artificial intelligence -- then a byproduct of having achieved this goal is that you will likely have published many papers. On the other hand, I feel that many people confuse these 'byproducts' as the actual goal and instead will end up chasing indicators of success like publications, money, and position instead. The same goes for making lots of money. Perhaps one would like to live a lifestyle with minimal amounts of work and maximal amounts of time spent doing things like camping or hunting. Then, this individual would need to have enough money saved up in order have the financial freedom to actualize this vision.
 
 
-Nowadays, I feel that there is a general yet meaningless obsession with "being successful". I often speak to people who tell me that they "want to be successful". When I hear people speak about success so nonchalantly, it makes me wonder what their definition of success is? I think that most often when I encounter this phrase, people are speaking about some generic definition of success defined by society -- usually it is money. It is their only understanding of success since they do not know what they really want for themselves.
+Nowadays, I feel that there is a general yet meaningless obsession with "being successful". I often speak to people who say that they "want to be successful". When I hear people speak about success so nonchalantly, it makes me wonder what their definition of success is? I think that most often when I encounter this phrase, people are speaking about some generic definition of success defined by society -- usually it is money. It is their only understanding of success since they do not know what they really want for themselves.
 
 
 When you *know* what you want, the definition of success is simple. It is simply achieving what you desire.
 
 #### How I learned this lesson.
 
-I feel that for my entire life, up until recently, I have been defining success using the "byproducts" instead of following my heart. For example, in high school and during my undergraduate studies my definition of success was getting good grades. Instead, if I had set my definition of success to be "learn as much as I can about the things that I like to learn about" (at the time it was math) -- the grades would have come, and even if they didn't it wouldn't matter since they were not involved in my definition of sucess. Had I known this at the time, I would have been able to save myself from a lot of uneccessary stress.  
+I feel that for my entire life, up until recently, I have been defining success using the "byproducts" and "indicators" of success instead of following my heart. For example, in high school and during my undergraduate studies my definition of success was getting good grades. Instead, if I had set my definition of success to be "learn as much as I can about the things that I like to learn about" (at the time it was math) -- the grades would have come, and even if they didn't it wouldn't matter since they were not involved in my definition of sucess. Had I known this at the time, I would have been able to save myself from a lot of uneccessary stress.  
 
 Later on during my M.Sc, I started to become obssesed with comparing the number of publications I had with others. Since I was too scared to decide what I wanted for myself, I turned to my community -- academia -- to define success for me. Once I started to understand lesson one, it became apparent to me that I was chasing a notion of success defined by the community I resided in. I would never become succesful continuing down this road because I would be moving farther and farther away from my own definition of success!
 
 ### Lesson three: find your right balance.
 
-When you know what you want, finding the right balance should be easy. If you want one thing and one thing only from life, then what may seem like an unbalanced life to others may be the correct balance for you. On the other hand, if you value many different things in life then it may not make much sense to devote all of your energy to one thing. I feel that the world has fooled us into believing that life should be about work, work, work. Sometimes I feel that people wear the sacrifices that they make to work more hours as some sort of badge of honor. It seems that many people are trying to "one up" the next guy in order to claim some make-belief trophy for who works the most. Of course, if you truly love your craft more than anything in the world, then the right balance for you might be to work all day -- and for you it probably doesn't even feel like work. But, for most people I think they are being tricked into living a miserable life where they force themselves to work more and more in order to fit in with other miserable people.   
+When you know what you want, finding the right balance should be easy. If you want one thing and one thing only from life, then what may seem like an unbalanced life to others may be the correct balance for you. On the other hand, if you value many different things in life then it may not make much sense to devote all of your energy to one thing. I feel that the world has fooled us into believing that life should be about work, work, work. I think that many people wear the sacrifices that they make to work more hours as some sort of badge of honor. It seems that many people are trying to "one up" the next guy in order to claim some make-belief trophy for who works the most. Of course, if you truly love your craft more than anything in the world, then the right balance for you might be to work all day -- and for you it probably doesn't even feel like work. But, for most people I think they are being tricked into living a miserable life where they force themselves to work more and more in order to fit in with other miserable people.   
 
 Instead, I think people should take care of themselves -- sleep enough, eat well, reduce stress, exercise. These things are non-negotiable. Many sacrifice these things to complete more 'tasks'. But at the end of the day, tasks are just tasks -- they can be done tomorrow and it is not worth it to sacrifice your well being to complete more tasks. We live only one life and any time spent without appreciation for the current moment is time wasted. Sometimes when we get caught up in the chase of completing more tasks, we lose sight of the moment. 
 
@@ -72,5 +72,8 @@ I actually learned about balance just before entering the M.Sc program. In my fi
 For some reason, it was easy for me to feel that something was wrong, and I was able to course correct easily. Throughout my M.Sc program, I maintained a life which was more balanced for me. It involved pursuing my hobbies and making time for friends and family *without* any feelings of guilt.
 
 
+### Conclusion
+
+Many people are growing up into confused adults. I am one of these people. To gain some level of clarity, it is important to know what you want. Knowing what you want provides you with the neccessary knowledge to come up with the correct definition of success for yourself. Then, once you've defined success, all that remains is to chase it. If you truly knew what you want, your definition of success will ensure that your chase of success contains the right balance for yourself. 
 
 ------
