--- a/_teaching/2019-20-CPSC536S.md
+++ b/_teaching/2019-20-CPSC536S.md
@@ -1,7 +1,7 @@
 ---
 title: "Graduate Teaching Assistant: Submodular Optimization"
 collection: teaching
-type: '<a href= "https://bshepherd.ca/courses/cpsc536S2020/">CPSC 536S: Submodular Optimization<\a>'
+type: '<a href= "https://bshepherd.ca/courses/cpsc536S2020/">CPSC 536S: Submodular Optimization</a>'
 venue: "UBC, Department of Computer Science"
 date: 2018-09-01
 ---
