--- a/_teaching/2017-18-CPSC420.md
+++ b/_teaching/2017-18-CPSC420.md
@@ -1,7 +1,7 @@
 ---
 title: "Graduate Teaching Assistant: Advanced Algorithms"
 collection: teaching
-type: "[CPSC420: Advanced Algorithms](https://www.fuhuthu.com/CPSC420S2018/index.html)"
+link: '<a href="https://www.fuhuthu.com/CPSC420S2018/index.html">CPSC420: Advanced Algorithms</a>'
 venue: "UBC, Department of Computer Science"
 date: 2018-01-01
 ---
